<resources>
    <string name="app_name">ParkAndGoApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_consumerSupport">Consumer Support</string>
    <string name="call">Call Support</string>
    <string name="email">Send an Email</string>
    <string name="btnAddParking">AddParking</string>
    <string name="btnParkingR">ViewParking</string>
    <string name="btnlogin">Go Ahead! Register</string>
    <string name="txtsignin">Already a Member? Login below</string>
    <string name="txtsignup">New Here? Sign Up</string>
    <string name="menu_help">Help</string>
    <string name="menu_search">Search</string>
    <string name="txtcall">Contact Us:</string>
    <string name="txtEmail">Email Us:</string>
    <string name="btnCall">Call Support</string>
    <string name="btnEmail">Send Us an Email</string>
    <string name="btnSignUp">SignUp</string>
    <string name="btnSignIn">Sign In</string>
    <string name="txtTitle">Welcome to Park And Go !</string>
    <string name="edtusername" />
    <string name="edtpassword" />
    <string name="btnsignin">Sign In</string>

    <string name="txtTitle1">Profile Information</string>
    <string name="txtTitle2">Payment Information</string>
    <string name="edtemail" />
    <string name="edtphone" />
    <string name="edtnumberplate" />
    <string name="edtDate" />
    <string name="edtCVV" />
    <string name="edtCardNumber" />
    <string name="imgTitle">Title Image</string>


</resources>
